# swanlake-ai

./: .gitignore  README.md
backend/: .gitignore  docker-compose.yaml
backend/.github/workflows/: go-api-gateway-ci.yml  py-llm-service-ci.yml
backend/database/sql/: db_create.sql
backend/go-api-gateway/: Makefile  go.mod  go.sum
backend/go-api-gateway/cmd/swanlake/: swanlake.go
backend/go-api-gateway/internal/handlers/: ai_explorer.go  chat.go  healthcheck.go  mongodb.go
backend/go-api-gateway/internal/models/: ai_explore.go  chat.go  google.go  mongo.go  tavilysearch.go
backend/go-api-gateway/internal/routes/: routes.go
backend/go-api-gateway/internal/services/: ai_explore.go  chat.go  google.go  mongodb.go  tavilysearch.go
backend/go-api-gateway/internal/utilities/: utilities.go
backend/go-api-gateway/services/mongo/: dbsetup.go  mongodb.go
backend/llm-service/: Makefile  main.py  pyproject.toml
backend/llm-service/config/: guardrail_prompt.yaml  guardrails_conf.yaml  prompts.yaml
backend/llm-service/src/: generate.py  redis.py  tools.py
frontend/: .gitignore  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/src/actions/: formSubmissions.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/admin/: layout.tsx  (+1 more)
frontend/src/components/: Footer.tsx  ImageGrid.tsx  NavigationBar.tsx  imageSlider.tsx
frontend/src/contexts/: context.tsx  formContext.ts  imageContext.ts
frontend/src/hooks/: use-addrecords.ts  use-chat.ts  use-collections.ts
frontend/src/lib/: constants.tsx
(+40 files in other folders)
